--- a/incremental/configs/data/bbn_CONTACT_INFO_subset_X_instance_Y.yaml
+++ b/incremental/configs/data/bbn_CONTACT_INFO_subset_X_instance_Y.yaml
@@ -6,7 +6,7 @@ dataset_paths:
   incremental_dev.url: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_X/instance_Y/sons_of_CONTACT_INFO/incremental_dev_url.json
   test: /home/remote_hdd/datasets_for_incremental_training/bbn/test.json
 rw_options:
-  modality: Load
+  modality: CreateAndSave
   light: true
   dirpath: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/CONTACT_INFO/subset_X/instance_Y/
   types_list_path: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/CONTACT_INFO/types_list.txt
