--- a/incremental/configs/data/bbn_LOCATION_subset_X_instance_Y.yaml
+++ b/incremental/configs/data/bbn_LOCATION_subset_X_instance_Y.yaml
@@ -10,7 +10,7 @@ dataset_paths:
   incremental_dev.RIVER: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_X/instance_Y/sons_of_LOCATION/incremental_dev_RIVER.json
   test: /home/remote_hdd/datasets_for_incremental_training/bbn/test.json
 rw_options:
-  modality: CreateAndSave
+  modality: Load
   light: true
   dirpath: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/LOCATION/subset_X/instance_Y/
   types_list_path: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/LOCATION/types_list.txt
