--- a/incremental/configs/data/bbn_EVENT_subset_X_instance_Y.yaml
+++ b/incremental/configs/data/bbn_EVENT_subset_X_instance_Y.yaml
@@ -8,7 +8,7 @@ dataset_paths:
   incremental_dev.WAR: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_X/instance_Y/sons_of_EVENT/incremental_dev_WAR.json
   test: /home/remote_hdd/datasets_for_incremental_training/bbn/test.json
 rw_options:
-  modality: CreateAndSave
+  modality: Load
   light: true
   dirpath: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/EVENT/subset_X/instance_Y/
   types_list_path: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/EVENT/types_list.txt
