--- a/incremental/configs/data/bbn_ORGANIZATION_subset_X_instance_Y.yaml
+++ b/incremental/configs/data/bbn_ORGANIZATION_subset_X_instance_Y.yaml
@@ -16,7 +16,7 @@ dataset_paths:
   incremental_dev.RELIGIOUS: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_X/instance_Y/sons_of_ORGANIZATION/incremental_dev_RELIGIOUS.json
   test: /home/remote_hdd/datasets_for_incremental_training/bbn/test.json
 rw_options:
-  modality: CreateAndSave
+  modality: Load
   light: true
   dirpath: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/ORGANIZATION/subset_X/instance_Y/
   types_list_path: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/ORGANIZATION/types_list.txt
