--- a/incremental/configs/data/generated_config_files/bbn_SUBSTANCE_subset_10_instance_2.yaml
+++ b/incremental/configs/data/generated_config_files/bbn_SUBSTANCE_subset_10_instance_2.yaml
@@ -2,52 +2,41 @@ dataset_paths:
   pretraining_train: /home/remote_hdd/datasets_for_incremental_training/bbn/complete/pretraining_train_nodev.json
   pretraining_dev: /home/remote_hdd/datasets_for_incremental_training/bbn/complete/pretraining_dev.json
   pretraining_test: /home/remote_hdd/datasets_for_incremental_training/bbn/complete/pretraining_test.json
-  
   incremental_train.CHEMICAL: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_10/instance_2/sons_of_SUBSTANCE/incremental_train_CHEMICAL.json
   incremental_dev.CHEMICAL: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_10/instance_2/sons_of_SUBSTANCE/incremental_dev_CHEMICAL.json
-  
   incremental_train.DRUG: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_10/instance_2/sons_of_SUBSTANCE/incremental_train_DRUG.json
   incremental_dev.DRUG: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_10/instance_2/sons_of_SUBSTANCE/incremental_dev_DRUG.json
-  
   incremental_train.FOOD: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_10/instance_2/sons_of_SUBSTANCE/incremental_train_FOOD.json
   incremental_dev.FOOD: /home/remote_hdd/datasets_for_incremental_training/bbn/complete_subset_10/instance_2/sons_of_SUBSTANCE/incremental_dev_FOOD.json
-  
   test: /home/remote_hdd/datasets_for_incremental_training/bbn/test.json
-
-# tokenizer_params: # inherited from data_pretrain.yaml
 rw_options:
-  modality: Load # in [Create, CreateAndSave, Load]
+  modality: Load
+  light: true
   dirpath: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/SUBSTANCE/subset_10/instance_2/
-  light: True
   types_list_path: /home/remote_hdd/tokenized_datasets/bbn/specialization/incremental/SUBSTANCE/types_list.txt
-
 dataloader_params:
-    name: torch.DataLoader
-    pretraining_train:
-      batch_size: 5
-      shuffle: True
-    pretraining_dev:
-      batch_size: 64
-    pretraining_test:
-      batch_size: 64
-    
-    incremental_train.CHEMICAL:
-      batch_size: 5
-      shuffle: True
-    incremental_dev.CHEMICAL:
-      batch_size: 5
-    
-    incremental_train.DRUG:
-      batch_size: 5
-      shuffle: True
-    incremental_dev.DRUG:
-      batch_size: 5
-
-    incremental_train.FOOD:
-      batch_size: 5
-      shuffle: True
-    incremental_dev.FOOD:
-      batch_size: 5
-
-    test:
-      batch_size: 64
+  name: torch.DataLoader
+  pretraining_train:
+    batch_size: 5
+    shuffle: true
+  pretraining_dev:
+    batch_size: 64
+  pretraining_test:
+    batch_size: 64
+  incremental_train.CHEMICAL:
+    batch_size: 5
+    shuffle: true
+  incremental_dev.CHEMICAL:
+    batch_size: 5
+  incremental_train.DRUG:
+    batch_size: 5
+    shuffle: true
+  incremental_dev.DRUG:
+    batch_size: 5
+  incremental_train.FOOD:
+    batch_size: 5
+    shuffle: true
+  incremental_dev.FOOD:
+    batch_size: 5
+  test:
+    batch_size: 64
